/* Encoding: UTF-8 (No BOM)  Notation (in 5th position):
     * Change, ! Fix, % Optimization, + Addition, - Removal, ; Comment
   Entries may not always be in chronological/commit order.
   See license at the end of file. */

2025-11-01 11:49 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * base/pmgr/hbpk-add.in
  * base/pmgr/hbpk-del.in
  * base/pmgr/hbpk-ls.in
    ! if [ -z ] not portable enough for macOS?
      it lacked else anyway...

  * .github/workflows/macos.yml
    ; test

2025-10-31 22:07 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * ubuntu-arm64.yml
  * windows.yml
  * ubuntu.yml
  * macos.yml
    * get grep from brew on macOS
    + verbose=no > $HOME/.wgetrc

2025-10-31 18:51 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * base/Makefile
  * common.mk
    * do we need to export PKGDEST=(?)

2025-10-31 17:43 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * common.mk
  * build/zig-binary/Makefile
    * on macOS machine name is arm64 not aarch64 here again

  * .github/workflows/macos.yml
    * /usr/bin/cat -> /bin/cat

2025-10-31 17:17 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  + .github/workflows/macos.yml
    + added macos-latest runner
    
  * .github/workflows/ubuntu-arm64.yml
  * .github/workflows/ubuntu.yml
  * .github/workflows/windows.yml
    * fix path oops

2025-10-31 16:47 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * base/Makefile
  * base/pmgr/Makefile
  * base/xz-current/Makefile
  * base/xz-inherit/Makefile
  * base/xz/Makefile
  - base/GNU.txt
  + base/gnu.mk
  + base/via.mk
    * changed BSD Make bootstrap
      to use swappable via.mk

  * build/Makefile
    + PKGSELECTION="pkgname1 pkgname2 ..."
      to build specific packages

  * .github/workflows/ubuntu-arm64.yml
  * .github/workflows/ubuntu.yml
  * .github/workflows/windows.yml
    * changed to use PKGSELECTION=
    + add diffutils on win/MSYS2

  * common.mk
    ; final variables proposal

  * README
    + [extra]
