@@ -3,6 +3,13 @@
    Entries may not always be in chronological/commit order.
    See license at the end of file. */
 
+2025-11-01 12:12 UTC+0100 Aleksander Czajczynski (hb fki.pl)
+  * hbinfo.mk
+    * properly escape $ -> $$ while grepping
+
+  * .github/workflows/macos.yml
+    - test
+
 2025-11-01 11:49 UTC+0100 Aleksander Czajczynski (hb fki.pl)
   * base/pmgr/hbpk-add.in
   * base/pmgr/hbpk-del.in
